adicionado configurações do  post no swagger, gitignore e um novo arquivo server1.ts para teste
